# CMake_Proj_Template

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompileOptions.cmake  Dependencies.cmake  InstallConfig.cmake  MyProjectConfig.cmake.in  PackageConfig.cmake  Utils.cmake
include/myproject/: MyProject.h
src/: main.cpp
test/: CMakeLists.txt
